# Programmieruebung_Abschlussprojekt_SS2025

./: .gitignore  README.md  main.py  main_elias.py  main_julius.py  pyproject.toml
Classes_elias/: ekgdata.py  person.py
classes_julius/: person.py
data/: person_db.json
data/csv_files/: pillersee.csv  wildschoenau.csv
data/fit_files/: long_endurance_ride.fit  pillersee.fit  tempo_blocks_training.fit  vo2_max_training.fit  wildschoenau.fit
data/gpx_files/: wildschoenau.gpx
pages/: athlet.py  gpx.py  kalender.py
src/: analyze_data.py
src/classes/: ekgdata.py  person.py
