[project]
name = "Programmieruebung_Abschlussprojekt_SS2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "juliusmayr, MaierElias", email = "mj4127@mci4me.at, me7770@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "numpy>=2.3.0", "pandas>=2.3.0", "jupyter>=1.1.1", "neurokit2>=0.2.11", "plotly>=6.1.2", "matplotlib>=3.10.3", "fitparse>=1.2.0", "gpxpy>=1.6.2", "pydeck>=0.9.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]

streamlit = "python -m streamlit run main.py"

